[metadata]
name = code-cultivator
version = 0.0
author = Gordon Bailey
author_email = grodtron@github.com
description = A simple ChatGPT code generation experiment
license = MIT
url = https://github.com/grodtron/CodeCultivator

[options]
packages = find:
install_requires =
    dataclasses
    dataclasses-json
    requests
    types-requests
    mypy
    parameterized
    PyYAML
    types-PyYAML
    PyGithub

[options.entry_points]
console_scripts =
    cultivate = cultivator.cli:main
